# My_Rust_EasyBook

./: .gitignore  License.md  README.md
1.Hello Rust/: 0.说明.md  1. Rust简介.md  2.安装部署.md  3. Hello Rust.md
1.Hello Rust/课外/: 极速入门.md
10. 并发与异步编程/: 1. 原生Rust中的线程.md  2. 线程安全.md  3. 线程通信(Channel).md  4. 异步编程.md  5. Tokio.md  6. rayon.md  草稿纸.md
11.unsafe与低级别代码/: 1. unsafe.md  2.内存布局.md  3. FFI.md  4. 裸指针.md  5.低级别代码开发常用的一些模块.md  Unsafe.md
12.高阶特性与模式/: 高阶特性.md
16.实战一个游戏服务器/: Rust实战——高性能游戏服务器.md
2.Rust基础语法/: 1. 总览&基础类型.md  2. 复合类型.md  3. 控制流.md  4. 函数和模块.md  5.常用容器类型.md
3. 代码组织模块/: 1. mod模块.md
4. 所有权&借用/: 1. 所有权&借用.md
5. 泛型&trait/: 1. Trait.md  2. 泛型.md
6. 错误处理/: 1. 错误处理.md
7. 智能指针/: 1. 智能指针.md
8. 宏/: 宏.md
9.标准库与crates.io/: 常用API.md  常用第三方库.md
Tmp/: 3. 所有权&智能指针.md  大纲.md  深入trait （二）.md
实战01：一个大模型/toy_transformer/: Cargo.toml
实战01：一个大模型/toy_transformer/cli/: Cargo.toml
实战01：一个大模型/toy_transformer/cli/src/: main.rs
实战01：一个大模型/toy_transformer/corelib/: Cargo.toml
实战01：一个大模型/toy_transformer/corelib/src/: lib.rs
实战02：一个游戏服务器/tokio_server/: Cargo.toml  README.md
实战02：一个游戏服务器/tokio_server/src/: app_state.rs  main.rs  mongo_persist.rs  protocol.rs  protocol_helpers.rs  redis_cache.rs  types.rs
