[package]
name = "tokio_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
mongodb = { version = "2.0", features = ["tokio-runtime"] }
zstd = "0.10"
anyhow = "1.0"
thiserror = "1.0"
